# csv_tools

./: .gitignore  Cargo.toml  README.md  big_files.txt  build.rs  csv_tools.py  generate_test_data.py  massive_files.txt  temp.cs  test_data.csv
src/: file_utils.rs  main.rs  main.rs.backup  models.rs  progress.rs
src/commands/: cleaning.rs  date_ops.rs  file_ops.rs  header_ops.rs  inspection.rs  mod.rs  validation.rs
