[package]
name = "csv_tools"
version = "1.0.0"  # ✅ Esta es la versión que se pasará a CSV_TOOLS_VERSION
edition = "2021"
authors = ["SiisaRestApi Team"]
description = "High-performance CSV processing utilities for SiisaRestApi migrations"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
regex = "1.10"
chrono = "0.4"

[build-dependencies]
chrono = "0.4"  # ✅ Para build.rs (timestamp de compilación)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
